# wfm

./: .gitignore  CLUSTERING_IMPLEMENTATION.md  HIERARCHICAL_KMEANS_IMPLEMENTATION.md  LICENSE  README.md  pyproject.toml
examples/: foundation_model_demo.py
src/wfm/: __init__.py  base.py  diffusion_advection_reaction.py  functional.py  input_processor.py  memory.py  parasolver.py  pde.py  sensory_mapping.py  spherical_mesh.py  utils.py  vocab_EuroLLM-1.7B-Instruct_windowsort_100.json
tests/: notebook.ipynb
