[project]
name = "wfm"
version = "0.1.0"
description = "Wave Foundation Model - A PyTorch-based foundation model with spherical mesh, differential equations, and multi-modal input processing"
authors = [
    {name = "Davide Riva",email = "60431521+dave-shore@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0.0",
    "numpy (==1.26.4)",
    "Pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "matplotlib>=3.7.0",
    "plotly>=5.20.0",
    "scipy>=1.11.0",
    "librosa>=0.10.0",
    "jax (==0.5.3)",
    "nbformat (>=5.10.4,<6.0.0)",
    "transformers (>=4.56.0,<5.0.0)",
    "polars (>=1.32.3,<2.0.0)",
    "protobuf (>=6.32.0,<7.0.0)",
    "sentencepiece (>=0.2.1,<0.3.0)",
    "pykeops (>=2.3,<3.0)",
    "ipywidgets (>=8.1.7,<9.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ftfy (>=6.3.1,<7.0.0)"
]

[tool.poetry]
packages = [{include = "wfm", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.0.0"
numpy = "^1.24.0"
Pillow = "^10.0.0"
opencv-python = "^4.8.0"
matplotlib = "^3.7.0"
plotly = "^5.20.0"
scipy = "^1.11.0"
librosa = "^0.10.0"
scikit-learn = "^1.3.0"
pandas = "^2.0.0"
networkx = "^3.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
